# ai

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod
cmd/cli/: main.go
legacy/crates/ecosystem/: Cargo.toml
legacy/crates/ecosystem/src/: main.rs  utils.rs
legacy/crates/ecosystem/src/llm_scraper/: mod.rs  scraper.rs
legacy/crates/ecosystem/src/openwebui/: backup.rs  mod.rs
legacy/go-src/: Makefile
legacy/go-src/backup/: backup.go
legacy/go-src/utils/: utils.go
py_tools/: README.md  pyproject.toml
py_tools/src/api/: app.py  routes.py
py_tools/src/lib/: lib.py
py_tools/src/owui/tools/: web_search.py
py_tools/src/rags/football/: fbref.py  test_fbref.py
py_tools/src/rags/web_search/: basic_html_parser.py  search_result.py  test.py  test_searxng_search_engine.py  web_scraper.py
rags/: .gitignore  Makefile
rags/src/owui/tools/: web_search.py
rags/src/rags/web_search/: config.py  html_parser.py  search_engine.py  search_params.py  search_rag.py  searxng_search_engine.py  test_basic_html_parser.py  test_search_rag.py  test_web_scraper.py  web_scraper.py
src/: lib.rs
src/deep_research/: deep_research.rs  mod.rs
src/llm_scraper/: mod.rs  scraper.rs
src/llm_tasks/: llm_tasks.rs  mod.rs
src/openwebui/: backup.go  setup.go
src/react/: react.rs
src/searxng/: setup.go
src/web_tools/: mod.rs  web_tools.rs
