[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
arboard = "3.4.1"
clap = { version = "4.5.30", features = ["derive"] }
dotenv = "0.15.0"
pyo3 = "0.23.4"
pyo3-ffi = "0.23.4"
reqwest = "0.12.12"
rig-core = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }

[[bin]]
name = "cli"            # Name of your executable (optional, defaults to crate name)
path = "src/bin/cli.rs" # Path to your main binary file
